RESOLVED FIXED219928
[Mac] Numerous webgl tests continue to time out with the WebM format reader enabled
https://bugs.webkit.org/show_bug.cgi?id=219928
Summary [Mac] Numerous webgl tests continue to time out with the WebM format reader e...
Andy Estes
Reported 2020-12-15 16:45:51 PST
`[Mac] Numerous webgl tests continue to time out with the WebM format reader enabled
Attachments
Patch (6.59 KB, patch)
2020-12-15 16:55 PST, Andy Estes
no flags
Patch (6.59 KB, patch)
2020-12-15 17:13 PST, Andy Estes
no flags
Andy Estes
Comment 1 2020-12-15 16:55:47 PST
Eric Carlson
Comment 2 2020-12-15 17:10:11 PST
Comment on attachment 416304 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416304&action=review > Source/WebKit/Shared/mac/MediaFormatReader/TrackReader.cpp:115 > + ASSERT(!isMainThread()); Is this necessary?
Andy Estes
Comment 3 2020-12-15 17:10:50 PST
(In reply to Eric Carlson from comment #2) > Comment on attachment 416304 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=416304&action=review > > > Source/WebKit/Shared/mac/MediaFormatReader/TrackReader.cpp:115 > > + ASSERT(!isMainThread()); > > Is this necessary? Good call; it's not. I'll remove it.
Andy Estes
Comment 4 2020-12-15 17:13:39 PST
EWS
Comment 5 2020-12-15 18:02:29 PST
Committed r270876: <https://trac.webkit.org/changeset/270876> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416305 [details].
Radar WebKit Bug Importer
Comment 6 2020-12-15 18:03:21 PST
Note You need to log in before you can comment on or make changes to this bug.