[Mac] Numerous webgl tests continue to time out with the WebM format reader enabled https://bugs.webkit.org/show_bug.cgi?id=219928

Reviewed by Eric Carlson.

Source/WebKit:

Covered by existing tests.

* Shared/mac/MediaFormatReader/TrackReader.cpp:
(WebKit::MediaSampleByteRange::MediaSampleByteRange):
(WebKit::MediaSampleByteRange::trackID const):
(WebKit::TrackReader::addSample): Store MediaSampleByteRange's track ID as a uint64_t
instead of an AtomString that might've been created on another thread.

(WebKit::TrackReader::finalize): Ensure that m_sampleStorage really is destroyed on the
storage queue by explicitly settings its unique_ptr to nullptr in the lambda. Without
doing this, it's possible that the lambda will execute on the storage queue *before*
WorkQueue::dispatch returns, and since WorkQueue's BlockPtr is still holding a reference
to the block containing the lambda, it would not have been destroyed on the storage queue.

Tools:

* Scripts/webkitpy/port/mac.py:
(MacPort.logging_patterns_to_strip): Stripped unnecessary logging during VP9 decoding.


Canonical link: https://commits.webkit.org/232512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270876 268f45cc-cd09-0410-ab3c-d52691b4dbfc